--- a/index.html
+++ b/index.html
@@ -1258,7 +1258,7 @@ curl -H "Authorization: Bearer $TOKEN" \
         <!-- Footer -->
         <footer>
             <div class="container">
-                <p>API Pedidos v0.4 - Documentação gerada em Novembro de 2025</p>
+                <p>API Pedidos v0.4 - Documentação: Novembro de 2025</p>
                 <p><strong>URL Base:</strong> https://apidelibery.onrender.com</p>
             </div>
         </footer>
