--- a/index.html
+++ b/index.html
@@ -812,6 +812,7 @@ Content-Type: application/json</code></pre>
   "taxa": 5,
   "valor_total": 42.90,
   "tipoPedido": "Entrega",
+  "id": "0",
   "endereco": {
     "rua": "Rua das Flores",
     "numero": "123",
@@ -836,7 +837,7 @@ Content-Type: application/json</code></pre>
                             <h4>Resposta de Sucesso (201 Created)</h4>
                             <pre><code>{
   "ok": true,
-  "firebase_id": "-Nr98h12ad9",
+  "firebase_id": "-Nr98h12ad9", ///ID FIREBASE PEDIDO///
   "pasta": "PEDIDOS_MANUAIS_26112025",
   "pedido": {
     "cliente": "João Silva",
@@ -847,7 +848,7 @@ Content-Type: application/json</code></pre>
       "rua": "Rua das Flores"
     },
     "estimatedDeliveryMinutes": 30,
-    "id": "1732618800000",
+    "id": "0", ///ORDEM DO PEDIDO///
     "tipoPedido": "Entrega",
     "motoboy": {
       "id": "mb001",
@@ -1007,7 +1008,7 @@ Content-Type: application/json</code></pre>
       "rua": "Rua das Flores"
     },
     "estimatedDeliveryMinutes": 30,
-    "id": "1732618800000",
+    "id": "0",
     "tipoPedido": "Entrega",
     "motoboy": {
       "id": "mb001",
@@ -1089,6 +1090,7 @@ Content-Type: application/json</code></pre>
     "cliente": "João Silva",
     "endereco": { ... },
     "tipoPedido": "Entrega",
+    "id": 0,
     "status": "pendente",
     "valor_total": 42.90
   },
@@ -1141,6 +1143,7 @@ const pedidoResponse = await fetch('https://apidelibery.onrender.com/pedido', {
     telefone: '11999999999',
     pagamento: 'Pix',
     tipoPedido: 'Entrega',
+    id: 0,
     taxa: 5,
     valor_total: 42.90,
     endereco: {
